<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DurationActivity">

    <Button
        android:id="@+id/btn_tripObj1"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_objective"
        app:layout_constraintEnd_toStartOf="@+id/btn_tripDura1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tripDura1"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_duration"
        app:layout_constraintBottom_toBottomOf="@+id/btn_tripObj1"
        app:layout_constraintEnd_toStartOf="@+id/btn_tripTrans1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_tripObj1"
        app:layout_constraintTop_toTopOf="@+id/btn_tripObj1" />

    <Button
        android:id="@+id/btn_tripTrans1"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_transport"
        app:layout_constraintBottom_toBottomOf="@+id/btn_tripDura1"
        app:layout_constraintEnd_toStartOf="@+id/btn_tripBud1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_tripDura1"
        app:layout_constraintTop_toTopOf="@+id/btn_tripDura1" />

    <Button
        android:id="@+id/btn_tripBud1"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_budget"
        app:layout_constraintBottom_toBottomOf="@+id/btn_tripTrans1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_tripTrans1"
        app:layout_constraintTop_toTopOf="@+id/btn_tripTrans1" />

    <Button
        android:id="@+id/btn_back1"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="17dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- <ImageButton
        android:id="@+id/btn_view1"
        android:layout_width="123dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/view_more" />

    <ImageButton
        android:id="@+id/btn_view2"
        android:layout_width="123dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/btn_view1"
        app:srcCompat="@drawable/view_more" />-->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="395dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        app:srcCompat="@drawable/img99" />

    <!-- <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_launcher_background" />-->

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_back1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTop"
            android:text="@string/duration1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_budget1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImageDisplay"
                android:layout_width="116dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />

            <ImageButton
                android:id="@+id/Btn_viewmore"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/view_more" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTop"
            android:text="@string/duration2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_budget2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />


        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTop"
            android:text="@string/duration3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Tv_budget3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_tripTrans1"
        app:layout_constraintVertical_bias="0.144" />

</androidx.constraintlayout.widget.ConstraintLayout>